--- a/powers.html
+++ b/powers.html
@@ -53,7 +53,7 @@
 								<a href="#" onclick="location.href = 'liveaction.html'" class="nav-link">Live action</a>
 							</li>
 							<li class="nav-item">
-								<a href="#" onclick="location.href = 'lsinger.html'" class="nav-link">Songs</a>
+								<a href="#" onclick="location.href = 'singer.html'" class="nav-link">Songs</a>
 							</li>
 						
 							<li class="nav-item">
