--- a/Liveaction.html
+++ b/Liveaction.html
@@ -90,7 +90,7 @@
 <div class="container-fluid col-10 col-md-8 col-sm-10 col-lg-6">
      <p class="titolinoalto text-left " > Live action</p>
     <h1 class="titolonero "> Remake 2019</h1>
-    <p class="testobase" > Aladdin è un film fantasy statunitense del 2019 diretto da Guy Ritchie, che ha co-sceneggiato la sceneggiatura con John August. Prodotto dalla Walt Disney Pictures, è il remake live action dell'omonimo film d'animazione Disney del 1992, basato sull'omonimo racconto de Le mille e una notte.[1] Il film vede come attori Mena Massoud, Will Smith, Naomi Scott, Marwan Kenzari, Navid Negahban, Nasim Pedrad e Billy Magnussen. La trama segue Aladdin, un ladro di strada, mentre si innamora della principessa Jasmine, fa amicizia con un Genio che concede i tre desideri e combatte il malvagio Jafar.</p>
+    <p class="testobase" > Aladdin is a 2019 American musical fantasy film produced by Walt Disney Pictures. Directed by Guy Ritchie, from a script he co-wrote with John August, it is a live-action adaptation of Disney's 1992 animated film of the same name, which itself is based on the eponymous tale from One Thousand and One Nights. The film stars Will Smith, Mena Massoud, Naomi Scott, Marwan Kenzari, Navid Negahban, Nasim Pedrad, Billy Magnussen, and Numan Acar, as well as the voices of Alan Tudyk and Frank Welker, reprising his roles from all previous media. The plot follows Aladdin, a street urchin, as he falls in love with Princess Jasmine, befriends a wish-granting Genie, and battles the wicked Jafar.</p>
 </div>
 
 <div class="container-fluid col-11 col-md-10 col-sm-11 col-lg-6 text-center video">
