--- a/powers.html
+++ b/powers.html
@@ -99,7 +99,7 @@
 	<div class="col-11 col-md-5 col-sm-11 col-lg-4">
 		<p class="titolinopoteri text-left" > A genie is </p>
 		<h2 class="poteri"> strong</h2>
-		<p class="testopoteri" style="text-align: left;">Genie is estremely strong, he state he can even lift the palace of Agrabah with no problems</p>
+		<p class="testopoteri" style="text-align: left;">Genie is estremely strong, he states he can even lift the palace of Agrabah with no problems</p>
 	</div>
 </div>
 
@@ -118,7 +118,7 @@
 	<div class="col-11 col-md-5 col-sm-11 col-lg-4">
 		<p class="titolinopoteri text-left" > A genie is </p>
 		<h2 class="poteri"> magic</h2>
-		<p class="testopoteri"style="text-align: left;" >Genie can shape-shift into anything, give other people his power and undo the works of any magic.</p>
+		<p class="testopoteri"style="text-align: left;"> Genie can shape-shift into anything, give other people his power and undo the works of any magic.</p>
 	</div>
 </div>
 
