Fix animation scrolling text

--- a/index.html
+++ b/index.html
@@ -91,12 +91,17 @@
  
   <div class="container-fluid parte2" >
 	<p class="titolinonero3 text-center col-11 col-sm-11 col-md-8 col-lg-8 mx-auto "> I can help you with all your whishes</p>
-<div class="row d-flex flex-nowrap rotazione text-center">
-	<h2 class="desideri1 "> become a prince • be rich • be famous • </h2>
-	</div>
-<div class="row d-flex flex-nowrap rotazione">
-		<h2 class="desideri2 "> fly • reach the moon • be handsome • </h2>
-
+<div class="row d-flex flex-nowrap rotazione contenitore">
+	<div class="desideri1 scrolling" aria-hidden="true"> become a prince • be rich • be famous • </div>
+	<div class="desideri1 scrolling" aria-hidden="true"> become a prince • be rich • be famous • </div>
+	<div class="desideri1 scrolling" aria-hidden="true"> become a prince • be rich • be famous • </div>
+	<div class="desideri1 scrolling" aria-hidden="true"> become a prince • be rich • be famous • </div>
+</div>
+<div class="row d-flex flex-nowrap contenitore rotazione">
+	<div class="desideri2 scrolling2" aria-hidden="true"> fly • reach the moon • be handsome • </div>
+	<div class="desideri2 scrolling2" aria-hidden="true"> fly • reach the moon • be handsome • </div>
+	<div class="desideri2 scrolling2" aria-hidden="true"> fly • reach the moon • be handsome • </div>
+	<div class="desideri2 scrolling2" aria-hidden="true"> fly • reach the moon • be handsome • </div>
 </div>
 </div>
 <div class="container-fluid parte2">
