--- a/Liveaction.html
+++ b/Liveaction.html
@@ -13,6 +13,12 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 			<!-- Libreria de normalizacion de css / soporte full en todos los navegadores-->
 		<link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/8.0.0/normalize.css">
+		<!-- AOS-->
+		<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+		<!-- Slider-->
+		<link rel="stylesheet" href="css/js-slider.min.css">
+		<link rel="stylesheet" href="css/js-slider.css">
+
 		<link rel="stylesheet" type="text/css" href="estilos.css" />
 		<script language="JavaScript" type="text/JavaScript" src="java.js"></script>
 		
@@ -83,19 +89,22 @@
 
 <div class="container-fluid fondobianco">
 
-<div class="container-fluid coverremake col-12">
-	<img class="coverremake" src="img/remake.jpg">
+<div class="js-slider-container">
+	<img class="js-slider-first" src="img/split1.jpg">
+	<div class="js-slider-last-container">
+		<img src="img/split2.jpg" class="js-slider-last">
+	</div>
 </div>	
 
 <div class="container-fluid col-10 col-md-8 col-sm-10 col-lg-6">
-     <p class="titolinoalto text-left " > Live action</p>
-    <h1 class="titolonero "> Remake 2019</h1>
-    <p class="testobase" > Aladdin is a 2019 American musical fantasy film produced by Walt Disney Pictures. Directed by Guy Ritchie, from a script he co-wrote with John August, it is a live-action adaptation of Disney's 1992 animated film of the same name, which itself is based on the eponymous tale from One Thousand and One Nights. The film stars Will Smith, Mena Massoud, Naomi Scott, Marwan Kenzari, Navid Negahban, Nasim Pedrad, Billy Magnussen, and Numan Acar, as well as the voices of Alan Tudyk and Frank Welker, reprising his roles from all previous media. The plot follows Aladdin, a street urchin, as he falls in love with Princess Jasmine, befriends a wish-granting Genie, and battles the wicked Jafar.</p>
+     <p class="titolinoalto text-left " data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom"> Live action</p>
+    <h1 class="titolonero" data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom"> Remake 2019</h1>
+    <p class="testobase" data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom"> Aladdin è un film fantasy statunitense del 2019 diretto da Guy Ritchie, che ha co-sceneggiato la sceneggiatura con John August. Prodotto dalla Walt Disney Pictures, è il remake live action dell'omonimo film d'animazione Disney del 1992, basato sull'omonimo racconto de Le mille e una notte.[1] Il film vede come attori Mena Massoud, Will Smith, Naomi Scott, Marwan Kenzari, Navid Negahban, Nasim Pedrad e Billy Magnussen. La trama segue Aladdin, un ladro di strada, mentre si innamora della principessa Jasmine, fa amicizia con un Genio che concede i tre desideri e combatte il malvagio Jafar.</p>
 </div>
 
 <div class="container-fluid col-11 col-md-10 col-sm-11 col-lg-6 text-center video">
-	<p class="titolovideo text-left"> watch the trailer</p>
-	<video class="imgfilm2" width="100%" controls>
+	<p class="titolovideo text-left" data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom"> watch the trailer</p>
+	<video class="imgfilm2" width="100%" controls data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom">
 		<source src="img/trailer.mp4" type="video/mp4">
 		<source src="movie.ogg" type="video/ogg">
 		Your browser does not support the video tag.
@@ -104,7 +113,7 @@
 
 
 <div class="container-fluid col-10 col-md-8 col-sm-10 col-lg-6 text-center domanda" >
-	<p class="calltoaction text-center"> This is just my last appearence, there’s a lot more!</p>
+	<p class="calltoaction text-center" > This is just my last appearence, there’s a lot more!</p>
 	<a class="btn btn-primary bottone" onclick="location.href = 'films.html'" href="#" role="button">other films</a>
 </div>
 
@@ -131,9 +140,27 @@
 		}
 	}
 	</script>
+
 	<!-- Libreria Bootstrap JS-->
 		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+	
+	<!-- AOS-->
+	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+	<script>
+	  AOS.init();
+	</script>
+	 <!--slider-->
+	 <script  type="text/javascript" src="js/js-slider.min.js"></script>
+	 <script  type="text/javascript" src="js/js-slider.js"></script>
+
+	<script>
+		   (function($){
+        $(".js-slider-container").slider({
+                     });    })(jQuery);
+	</script>
+
+
 	</body>
 </html>
