--- a/Liveaction.html
+++ b/Liveaction.html
@@ -97,8 +97,8 @@
 </div>	
 
 <div class="container-fluid col-10 col-md-8 col-sm-10 col-lg-6">
-     <p class="titolinoalto text-left " data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom"> Live action</p>
-    <h1 class="titolonero" data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom"> Remake 2019</h1>
+     <p class="titolinoalto text-left " data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom"> Live action 2019</p>
+    <h1 class="titolonero" data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom"> Remake</h1>
     <p class="testobase" data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom"> Aladdin è un film fantasy statunitense del 2019 diretto da Guy Ritchie, che ha co-sceneggiato la sceneggiatura con John August. Prodotto dalla Walt Disney Pictures, è il remake live action dell'omonimo film d'animazione Disney del 1992, basato sull'omonimo racconto de Le mille e una notte.[1] Il film vede come attori Mena Massoud, Will Smith, Naomi Scott, Marwan Kenzari, Navid Negahban, Nasim Pedrad e Billy Magnussen. La trama segue Aladdin, un ladro di strada, mentre si innamora della principessa Jasmine, fa amicizia con un Genio che concede i tre desideri e combatte il malvagio Jafar.</p>
 </div>
 
