--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 			<!-- Libreria de normalizacion de css / soporte full en todos los navegadores-->
 		<link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/8.0.0/normalize.css">
+		
+		<!-- AOS-->
+		<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+		
 		<link rel="stylesheet" type="text/css" href="estilos.css" />
 		<script language="JavaScript" type="text/JavaScript" src="java.js"></script>
 		
@@ -83,21 +87,21 @@
 <div class="container-fluid fondoblu">
 
  <div class="container-fluid inizio ">
-	<p class="titolinonero1 text-left"> I’m here to</p>
-	<h1 class="titolo1 text-center"> grant your wishes</h1>
-	<p class="titolinonero2 text-right"> don’t waste them!</p>
+	<p class="titolinonero1 text-left" data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom"> I’m here to</p>
+	<h1 class="titolo1 text-center" data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom"> grant your wishes</h1>
+	<p class="titolinonero2 text-right" data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom"> don’t waste them!</p>
   </div>
 
  
   <div class="container-fluid parte2" >
 	<p class="titolinonero3 text-center col-11 col-sm-11 col-md-8 col-lg-8 mx-auto "> I can help you with all your whishes</p>
-<div class="row d-flex flex-nowrap rotazione contenitore">
+<div class="row d-flex flex-nowrap rotazione contenitore"data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom">
 	<div class="desideri1 scrolling" aria-hidden="true"> become a prince • be rich • be famous • </div>
 	<div class="desideri1 scrolling" aria-hidden="true"> become a prince • be rich • be famous • </div>
 	<div class="desideri1 scrolling" aria-hidden="true"> become a prince • be rich • be famous • </div>
 	<div class="desideri1 scrolling" aria-hidden="true"> become a prince • be rich • be famous • </div>
 </div>
-<div class="row d-flex flex-nowrap contenitore rotazione">
+<div class="row d-flex flex-nowrap contenitore rotazione" data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom">
 	<div class="desideri2 scrolling2" aria-hidden="true"> fly • reach the moon • be handsome • </div>
 	<div class="desideri2 scrolling2" aria-hidden="true"> fly • reach the moon • be handsome • </div>
 	<div class="desideri2 scrolling2" aria-hidden="true"> fly • reach the moon • be handsome • </div>
@@ -105,12 +109,12 @@
 </div>
 </div>
 <div class="container-fluid parte2">
-	<p class="titolinobianco1 text-center mx-auto col-11 col-sm-11 col-md-8 col-lg-8"> I’m the ever impressive, the long contained, 
+	<p class="titolinobianco1 text-center mx-auto col-11 col-sm-11 col-md-8 col-lg-8"data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom"> I’m the ever impressive, the long contained, 
 		often imitated, but never duplicated … </p>
 	<div class="p3sfondo">
 		<div class="genielamp ml-5">
-	<h1 class="titolo3">Genie </h1>
-	<h1 class="titolo3">of the lamp</h1>
+	<h1 class="titolo3" data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom">Genie </h1>
+	<h1 class="titolo3" data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom">of the lamp</h1>
 </div>
 	</div>	
  </div>
@@ -148,5 +152,12 @@
 		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+	
+		<!-- AOS-->
+	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+	<script>
+	  AOS.init();
+	</script>
+	
 	</body>
 </html>
