--- a/Liveaction.html
+++ b/Liveaction.html
@@ -87,7 +87,7 @@
 		</a>
 		
 
-<div class="container-fluid fondobianco">
+<div class="container-fluid fondobianco" style="z-index:-1">
 
 <div class="js-slider-container">
 	<img class="js-slider-first" src="img/split1.jpg">
