--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
  
   <div class="container-fluid parte2" >
-	<p class="titolinonero3 text-center col-11 col-sm-11 col-md-8 col-lg-8 mx-auto "> I can help you with all your whishes</p>
+	<p class="titolinonero3 text-center col-11 col-sm-11 col-md-8 col-lg-8 mx-auto" data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom"> I can help you with all your whishes</p>
 <div class="row d-flex flex-nowrap rotazione contenitore"data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom">
 	<div class="desideri1 scrolling" aria-hidden="true"> become a prince • be rich • be famous • </div>
 	<div class="desideri1 scrolling" aria-hidden="true"> become a prince • be rich • be famous • </div>
