--- a/Liveaction.html
+++ b/Liveaction.html
@@ -87,9 +87,9 @@
 		</a>
 		
 
-<div class="container-fluid fondobianco" style="z-index:-1">
+<div class="container-fluid fondobianco">
 
-<div class="js-slider-container">
+<div class="js-slider-container" style="z-index:-1">
 	<img class="js-slider-first" src="img/split1.jpg">
 	<div class="js-slider-last-container">
 		<img src="img/split2.jpg" class="js-slider-last">
