--- a/films.html
+++ b/films.html
@@ -13,6 +13,9 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 			<!-- Libreria de normalizacion de css / soporte full en todos los navegadores-->
 		<link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/8.0.0/normalize.css">
+		<!-- AOS-->
+		<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+		
 		<link rel="stylesheet" type="text/css" href="estilos.css" />
 		<script language="JavaScript" type="text/JavaScript" src="java.js"></script>
 		
@@ -84,31 +87,31 @@
 <div class="container-fluid fondoblu">
 
 <div class="container-fluid col-10 col-md-8 col-sm-10 col-lg-6 pb-5">
-     <p class="titolinoalto text-left " > Appearances </p>
-    <h1 class="titolonero" style="color: white;"> Main films</h1>
-	<p class="testobase" style="color: white;"> As well as largely driving the plot in the first film, the Genie serves as comic relief in each of his appearances. Genie is an important character in several films and he did cameo appearances in just as many movies. He also appeared in television programs and videogames. Now he still is a beloved character in several Disney theme parks. </p>
+     <p class="titolinoalto text-left " data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom" > Appearances </p>
+    <h1 class="titolonero" style="color: white;" data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom"> Main films</h1>
+	<p class="testobase" style="color: white;" data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom"> As well as largely driving the plot in the first film, the Genie serves as comic relief in each of his appearances. Genie is an important character in several films and he did cameo appearances in just as many movies. He also appeared in television programs and videogames. Now he still is a beloved character in several Disney theme parks. </p>
 </div>
 
 
 <div class="row flex-wrap text-center justify-content-around col-11 col-sm-11 col-md-10 col-lg-10 mx-auto pt-5">
 	
 	<div class="col-11 col-md-6 col-sm-11 col-lg-4 ">
-		<img class="imgfilm" width="100%" height="auto" src="img/aladdin.jpg" > 
-		<h2 class="titolofilm"> Aladdin</h2>
-		<p class="testobase" style="color: white;">The Genie first appears in Aladdin, where he is released from a magical oil lamp by the titular character in the collapsed Cave of Wonders. He explains that he can grant three wishes. With the aid of the genie of the lamp, Aladdin becomes rich and powerful and marries Princess Badroulbadour, the sultan's daughter. </p>
+		<img class="imgfilm" width="100%" height="auto" src="img/aladdin.jpg"  data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom"> 
+		<h2 class="titolofilm" data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom"> Aladdin</h2>
+		<p class="testobase" style="color: white;" data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom">The Genie first appears in Aladdin, where he is released from a magical oil lamp by the titular character in the collapsed Cave of Wonders. He explains that he can grant three wishes. With the aid of the genie of the lamp, Aladdin becomes rich and powerful and marries Princess Badroulbadour, the sultan's daughter. </p>
 </div>
 
 
 <div class="col-11 col-md-6 col-sm-11 col-lg-4 ">
-		<img class="imgfilm" width="100%" height="auto" src="img/jafar.jpg" > 
-		<h2 class="titolofilm"> The Return of Jafar</h2>
-		<p class="testobase" style="color: white;">In The Return of Jafar, the Genie returns to Agrabah, deciding the world isn't all that great without his friends to share it with. His powers are lessened by his own admission, as a freed genie is less powerful than one bound to a lamp, though he still retains several of his abilities, most notably shapeshifting, flight, and conjuration. </p>
+		<img class="imgfilm" width="100%" height="auto" src="img/jafar.jpg" data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom"> 
+		<h2 class="titolofilm" data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom"> The Return of Jafar</h2>
+		<p class="testobase" style="color: white;"data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom">In The Return of Jafar, the Genie returns to Agrabah, deciding the world isn't all that great without his friends to share it with. His powers are lessened by his own admission, as a freed genie is less powerful than one bound to a lamp, though he still retains several of his abilities, most notably shapeshifting, flight, and conjuration. </p>
 </div>
 
 <div class="col-11 col-md-6 col-sm-11 col-lg-4 ">
-	<img class="imgfilm" width="100%" height="auto" src="img/king.jpg" > 
-	<h2 class="titolofilm"> Aladdin and the King of Thieves</h2>
-	<p class="testobase" style="color: white;">In Aladdin and the King of Thieves, the Genie plays a considerably smaller role. Nevertheless, he still acts as Aladdin’s best friend and moral support. He also appears to be just as powerful as he was in the first film, that implies that his reduction of power was merely temporary. </p>
+	<img class="imgfilm" width="100%" height="auto" src="img/king.jpg" data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom" > 
+	<h2 class="titolofilm" data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom"> Aladdin and the King of Thieves</h2>
+	<p class="testobase" style="color: white;" data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom">In Aladdin and the King of Thieves, the Genie plays a considerably smaller role. Nevertheless, he still acts as Aladdin’s best friend and moral support. He also appears to be just as powerful as he was in the first film, that implies that his reduction of power was merely temporary. </p>
 </div>
 
 
@@ -147,5 +150,12 @@
 		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+	
+	<!-- AOS-->
+	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+	<script>
+	  AOS.init();
+	</script>
+	
 	</body>
 </html>
