--- a/personality.html
+++ b/personality.html
@@ -13,6 +13,9 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 			<!-- Libreria de normalizacion de css / soporte full en todos los navegadores-->
 		<link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/8.0.0/normalize.css">
+		<!-- AOS-->
+		<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+		
 		<link rel="stylesheet" type="text/css" href="estilos.css" />
 		<script language="JavaScript" type="text/JavaScript" src="java.js"></script>
 		
@@ -83,26 +86,26 @@
 <div class="container-fluid fondobianco">
 
 <div class="container-fluid col-10 col-md-8 col-sm-10 col-lg-6">
-     <p class="titolinoalto text-left " > About me</p>
-    <h1 class="titolonero"> Personality</h1>
-    <p class="testobase" > Genie is full of life and bursting with positive energy. Genie is benevolent, easygoing, and friendly; so much so, that he primarily uses his abilities as a means to amuse both himself and those around him. Though manic and explosive, Genie is also compassionate, wise, and serious when he feels it's necessary. He understands human emotions to a profound degree and takes matters such as love, trust, and being true to yourself quite seriously. He alway tries to lighten even the darkest moments with a dose of comedy, an example of this being the climax of the original film, where Genie transformed into a cheerleading squad to root for Aladdin during his battle against Jafar.
+     <p class="titolinoalto text-left "  data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom"> About me</p>
+    <h1 class="titolonero" data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom"> Personality</h1>
+    <p class="testobase"  data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom"> Genie is full of life and bursting with positive energy. Genie is benevolent, easygoing, and friendly; so much so, that he primarily uses his abilities as a means to amuse both himself and those around him. Though manic and explosive, Genie is also compassionate, wise, and serious when he feels it's necessary. He understands human emotions to a profound degree and takes matters such as love, trust, and being true to yourself quite seriously. He alway tries to lighten even the darkest moments with a dose of comedy, an example of this being the climax of the original film, where Genie transformed into a cheerleading squad to root for Aladdin during his battle against Jafar.
     </p>
 </div>
 
 <div class="row justify-content-center align-items-center flex-wrap immagini">
-    <img width="100%" height="100%" class="col-md-4 col-lg-3 col-sm-10 col-10 imgpersonality" src="img/Sorriso01.jpg" > 
-    <img width="100%" height="100%" class="col-md-4 col-lg-3 col-sm-10 col-10 imgpersonality" src="img/pensieroso.jpg" > 
+    <img width="100%" height="100%" class="col-md-4 col-lg-3 col-sm-10 col-10 imgpersonality" src="img/Sorriso01.jpg"  data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom"> 
+    <img width="100%" height="100%" class="col-md-4 col-lg-3 col-sm-10 col-10 imgpersonality" src="img/pensieroso.jpg" data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom" > 
 </div>
 
 <div class="container-fluid col-10 col-md-8 col-sm-10 col-lg-6">
-   <h1 class="titolonero "> Background</h1>
-   <p class="testobase" > Genie is the tritagonist of Disney's 1992 animated feature film, Aladdin. He is a comedic, larger-than-life spirit who acts as a servant to whomever holds ownership of the magic lamp in which he resides. Genie possesses phenomenal cosmic power that allows him to grant wishes, shape-shift, and transcend space and time; however, he is burdened to remain bound to his lamp for eternity unless granted freedom by a master.
+   <h1 class="titolonero "  data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom"> Background</h1>
+   <p class="testobase"  data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom"> Genie is the tritagonist of Disney's 1992 animated feature film, Aladdin. He is a comedic, larger-than-life spirit who acts as a servant to whomever holds ownership of the magic lamp in which he resides. Genie possesses phenomenal cosmic power that allows him to grant wishes, shape-shift, and transcend space and time; however, he is burdened to remain bound to his lamp for eternity unless granted freedom by a master.
 
     <br> <br> As well as largely driving the plot in the first movie, Genie serves as a comic relief element in each of his appearances. He is shown to have shape-shifting abilities, which allow for many and varied sight gags. His supernatural disposition permits him to break the fourth wall, as well as parody real-life people and popular culture completely outside of the boundaries of the universe in which he is contained. Robin Williams is responsible for most of these because he improvised many of the lines in the film. Genie's true name, if he has one, has never been revealed; he answers to being called "Genie", and never says that he has a real name. </p>
 </div>
 
 <div class="row justify-content-center flex-wrap immagini">
-    <img class="col-10 col-md-10 col-sm-10 col-lg-8 imgfilm" src="img/show.jpg" > 
+    <img class="col-10 col-md-10 col-sm-10 col-lg-8 imgfilm" src="img/show.jpg" data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom" > 
 </div>
 
 
@@ -138,5 +141,12 @@
 		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+	
+	<!-- AOS-->
+	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+	<script>
+	  AOS.init();
+	</script>
+	
 	</body>
 </html>
