--- a/powers.html
+++ b/powers.html
@@ -13,6 +13,10 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 			<!-- Libreria de normalizacion de css / soporte full en todos los navegadores-->
 		<link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/8.0.0/normalize.css">
+		
+		<!-- AOS-->
+		<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+		
 		<link rel="stylesheet" type="text/css" href="estilos.css" />
 		<script language="JavaScript" type="text/JavaScript" src="java.js"></script>
 		
@@ -85,9 +89,9 @@
 <div class="container-fluid fondogiallo">
 
 <div class="container-fluid col-10 col-md-8 col-sm-10 col-lg-6">
-     <p class="titolinoalto2 text-left " > Powers & abilities </p>
-    <h1 class="titolonero "> Powers</h1>
-    <p class="testobase" > Genie is the most powerful being in the universe. As shown in the first movie, ha has phenomenal cosmic powers. He could easily break the laws of nature, shape-shift into anything, break the fourth wall, warp reality at a whim, lift the palace of Agrabah with no problems, give other people his power, undo the works of any magic, and escape a magically sealed cave.
+     <p class="titolinoalto2 text-left " data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom"> Powers & abilities </p>
+    <h1 class="titolonero "data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom"> Powers</h1>
+    <p class="testobase" data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom"> Genie is the most powerful being in the universe. As shown in the first movie, ha has phenomenal cosmic powers. He could easily break the laws of nature, shape-shift into anything, break the fourth wall, warp reality at a whim, lift the palace of Agrabah with no problems, give other people his power, undo the works of any magic, and escape a magically sealed cave.
 
 		<br> <br> However, he had three limits to his abilities; he cannot kill, he cannot make people fall in love, and he cannot raise the dead. Aside from these three limitations, he was virtually omnipotent.</p>
 </div>
@@ -95,30 +99,30 @@
 <div class="d-flex row tuttipoteri justify-content-center">
 
 <div class="row flex-wrap immaginigialle">
-		<img class="col-11 col-md-5 col-lg-6 col-sm-11" src="img/forte.png" > 
+		<img class="col-11 col-md-5 col-lg-6 col-sm-11" src="img/forte.png" data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom" > 
 	<div class="col-11 col-md-5 col-sm-11 col-lg-4">
-		<p class="titolinopoteri text-left" > A genie is </p>
-		<h2 class="poteri"> strong</h2>
-		<p class="testopoteri" style="text-align: left;">Genie is estremely strong, he states he can even lift the palace of Agrabah with no problems</p>
+		<p class="titolinopoteri text-left" data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom"> A genie is </p>
+		<h2 class="poteri"data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom"> strong</h2>
+		<p class="testopoteri" style="text-align: left;"data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom">Genie is estremely strong, he states he can even lift the palace of Agrabah with no problems</p>
 	</div>
 </div>
 
 <div class="row flex-wrap immaginigialle2">
-	<img class="col-11 col-md-5 col-lg-6 col-sm-11" src="img/cena.png" >
+	<img class="col-11 col-md-5 col-lg-6 col-sm-11" src="img/cena.png"data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom" >
 	<div class="col-11 col-md-5 col-sm-11 col-lg-4">
-		<p class="titolinopoteri text-left" > A genie is </p>
-		<h2 class="poteri"> creative</h2>
-		<p class="testopoteri" style="text-align: left;">Genie can perform multiple arts, he can sing, dance, he’s even a ventriloquist.</p>
+		<p class="titolinopoteri text-left"data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom" > A genie is </p>
+		<h2 class="poteri"data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom"> creative</h2>
+		<p class="testopoteri" style="text-align: left;"data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom">Genie can perform multiple arts, he can sing, dance, he’s even a ventriloquist.</p>
 	</div>
 	 
 </div>
 
 <div class="row flex-wrap immaginigialle">
-	<img class="col-11 col-md-5 col-lg-6 col-sm-11" src="img/Magia.png" > 
+	<img class="col-11 col-md-5 col-lg-6 col-sm-11" src="img/Magia.png" data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom" > 
 	<div class="col-11 col-md-5 col-sm-11 col-lg-4">
-		<p class="titolinopoteri text-left" > A genie is </p>
-		<h2 class="poteri"> magic</h2>
-		<p class="testopoteri"style="text-align: left;"> Genie can shape-shift into anything, give other people his power and undo the works of any magic.</p>
+		<p class="titolinopoteri text-left" data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom"> A genie is </p>
+		<h2 class="poteri"data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom"> magic</h2>
+		<p class="testopoteri"style="text-align: left;" data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom"> Genie can shape-shift into anything, give other people his power and undo the works of any magic.</p>
 	</div>
 </div>
 
@@ -156,5 +160,12 @@
 		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+	
+	<!-- AOS-->
+	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+	<script>
+	  AOS.init();
+	</script>
+	
 	</body>
 </html>
