--- a/singer.html
+++ b/singer.html
@@ -13,6 +13,10 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 			<!-- Libreria de normalizacion de css / soporte full en todos los navegadores-->
 		<link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/8.0.0/normalize.css">
+		
+			<!-- AOS-->
+		<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+		
 		<link rel="stylesheet" type="text/css" href="estilos.css" />
 		<script language="JavaScript" type="text/JavaScript" src="java.js"></script>
 		
@@ -84,14 +88,14 @@
 <div class="container-fluid fondogiallo">
 
 <div class="container-fluid col-10 col-md-8 col-sm-10 col-lg-6">
-     <p class="titolinoalto2 text-left " > Songs </p>
-    <h1 class="titolonero "> A pop star!</h1>
+     <p class="titolinoalto2 text-left "data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom" > Songs </p>
+    <h1 class="titolonero "data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom"> A pop star!</h1>
 </div>
 
 <div class="container-fluid col-11 col-md-10 col-sm-11 col-lg-8 text-center video">
 
-	<p class="titolovideo text-left"> Friend Like me</p>
-	<video class="imgfilm2" width="100%" controls>
+	<p class="titolovideo text-left"data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom"> Friend Like me</p>
+	<video class="imgfilm2" width="100%" controls data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom">
 		<source src="img/friendlikeme.mp4" type="video/mp4">
 		<source src="movie.ogg" type="video/ogg">
 		Your browser does not support the video tag.
@@ -100,8 +104,8 @@
 
 <div class="container-fluid col-11 col-md-10 col-sm-11 col-lg-8 text-center video">
 
-	<p class="titolovideo text-left"> Prince ali</p>	
-	<video class="imgfilm2" width="100%" controls>
+	<p class="titolovideo text-left"data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom"> Prince ali</p>	
+	<video class="imgfilm2" width="100%" controlsdata-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom">
 		<source src="img/princeali.mp4" type="video/mp4">
 		<source src="movie.ogg" type="video/ogg">
 		Your browser does not support the video tag.
@@ -140,5 +144,11 @@
 		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
+		<!-- AOS-->
+	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+	<script>
+	  AOS.init();
+	</script>
 	</body>
 </html>
