--- a/error.html
+++ b/error.html
@@ -22,7 +22,7 @@
 
 		<div class="container-fluid text-left scritte" >
 			<p class="titolinobianco2 text-left col-12 col-sm-12 col-md-8 col-lg-6"> Don't despair! <br> Let me out of the lamp and I will help you finding what you're looking for</p>
-			<a class="btn btn-primary  bottone" href="#" onclick="location.href = 'contatti.html'" role="button">GO BACK HOME</a>
+			<a class="btn btn-primary  bottone" href="#" onclick="location.href = 'index.html'" role="button">GO BACK HOME</a>
 		</div>
 
 	
