--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
  
   <div class="container-fluid parte2" >
 	<p class="titolinonero3 text-center col-11 col-sm-11 col-md-8 col-lg-8 mx-auto" data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom"> I can help you with all your whishes</p>
-<div class="row d-flex flex-nowrap contenitore"data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom">
+<div class="row d-flex flex-nowrap contenitore">
 	<div class="desideri1 scrolling" aria-hidden="true"> become a prince • be rich • be famous • </div>
 	<div class="desideri1 scrolling" aria-hidden="true"> become a prince • be rich • be famous • </div>
 	<div class="desideri1 scrolling" aria-hidden="true"> become a prince • be rich • be famous • </div>
 	<div class="desideri1 scrolling" aria-hidden="true"> become a prince • be rich • be famous • </div>
 </div>
-<div class="row d-flex flex-nowrap contenitore" data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom">
+<div class="row d-flex flex-nowrap contenitore">
 	<div class="desideri2 scrolling2" aria-hidden="true"> fly • reach the moon • be handsome • </div>
 	<div class="desideri2 scrolling2" aria-hidden="true"> fly • reach the moon • be handsome • </div>
 	<div class="desideri2 scrolling2" aria-hidden="true"> fly • reach the moon • be handsome • </div>
