--- a/Liveaction.html
+++ b/Liveaction.html
@@ -26,7 +26,7 @@
 	<body>
 		<header>
 
-			<div class="col-lg-2 col-md-4 col-sm-4 col-4 logo">
+			<div class="col-lg-2 col-md-4 col-sm-4 col-4 logo" z-index:1">
 				<a href="index.html">
 					<img class="imglogo" src="img/lampada.png">
 				</a>
@@ -89,7 +89,7 @@
 
 <div class="container-fluid fondobianco">
 
-<div class="js-slider-container" style="z-index:-1">
+<div class="js-slider-container" style=">
 	<img class="js-slider-first" src="img/split1.jpg">
 	<div class="js-slider-last-container">
 		<img src="img/split2.jpg" class="js-slider-last">
