--- a/Liveaction.html
+++ b/Liveaction.html
@@ -158,7 +158,9 @@
 	<script>
 		   (function($){
         $(".js-slider-container").slider({
-                     });    })(jQuery);
+                 rollback : true, // true|false
+            duration : 400, // Durée de l'animation en ms
+            width : '50%'    });    })(jQuery);
 	</script>
 
 
