--- a/contatti.html
+++ b/contatti.html
@@ -109,7 +109,7 @@
 			<span for="">Your Message</span>
 			</label>
 
-			<a class="btn btn-primary bottone" href="mailto:michela548gmail.com" role="button" data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom">Send</a>
+			<a class="btn btn-primary bottone" href="mailto:michela548@gmail.com" role="button" data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom">Send</a>
 			</form>
 			</div>
 			        
