--- a/contatti.html
+++ b/contatti.html
@@ -13,10 +13,6 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 			<!-- Libreria de normalizacion de css / soporte full en todos los navegadores-->
 		<link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/8.0.0/normalize.css">
-		
-		<!-- AOS-->
-		<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-		
 		<link rel="stylesheet" type="text/css" href="estilos.css" />
 		<script language="JavaScript" type="text/JavaScript" src="java.js"></script>
 		
@@ -24,7 +20,7 @@
 	<body>
 		<header>
 
-			<div class="col-lg-2 col-md-4 col-sm-4 col-4 logo" style="z-index:1">
+			<div class="col-lg-2 col-md-4 col-sm-4 col-4 logo">
 				<a href="index.html">
 					<img class="imglogo" src="img/lampada.png">
 				</a>
@@ -90,26 +86,28 @@
 
 			<div class="inner col-11 col-sm-11 col-md-10 col-lg-6 text-left">
 
-		<form >
-			<h3 class="titolinoalto text-left" data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom">Contact Us</h3>
-			<p class="titolocontatti" data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom">I’m so excited to hear from you</p>
+		<form action="https://formspree.io/xknqzlgp" method="POST">
+			<h3 class="titolinoalto text-left" >Contact Us</h3>
+			<p class="titolocontatti">I’m so excited to hear from you</p>
 			
-			<label class="form-group" data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom">
-			<input type="text" class="form-control" required="">
+			<label class="form-group">
+			<input type="text" name="name" class="form-control" required="">
 			<span>Your Name</span>
 			</label>
 
-			<label class="form-group" data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom">
-			<input type="text" class="form-control" required="">
+			<label class="form-group">
+			<input type="email" name="_replyto" class="form-control" required="">
 			<span for="">Your Mail</span>
 			</label>
 
-			<label class="form-group" data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom">
-			<textarea name="" id="" class="form-control" required=""></textarea>
+			<label class="form-group">
+			<textarea name="message" id="" class="form-control" required=""></textarea>
 			<span for="">Your Message</span>
 			</label>
 
-			<a class="btn btn-primary bottone" href="mailto:michela548@gmail.com" role="button" data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom">Send</a>
+			<div class="text-center text-md-left">
+                <button class="btn btn-primary bottone" type="submit" value="Send">Send</button>
+            </div>
 			</form>
 			</div>
 			        
@@ -143,11 +141,5 @@
 		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-	<!-- AOS-->
-	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-	<script>
-	  AOS.init();
-	</script>
-	
 	</body>
 </html>
