--- a/contatti.html
+++ b/contatti.html
@@ -20,7 +20,7 @@
 	<body>
 		<header>
 
-			<div class="col-lg-2 col-md-4 col-sm-4 col-4 logo">
+			<div class="col-lg-2 col-md-4 col-sm-4 col-4 logo" style="z-index:1">
 				<a href="index.html">
 					<img class="imglogo" src="img/lampada.png">
 				</a>
