--- a/contatti.html
+++ b/contatti.html
@@ -86,7 +86,7 @@
 
 			<div class="inner col-11 col-sm-11 col-md-10 col-lg-6 text-left">
 
-		<form action="https://formspree.io/xknqzlgp" method="POST">
+		<form action="respuesta.html" method="POST" netlify>
 			<h3 class="titolinoalto text-left" >Contact Us</h3>
 			<p class="titolocontatti">I’m so excited to hear from you</p>
 			
