--- a/respuesta.html
+++ b/respuesta.html
@@ -37,7 +37,7 @@
 <div class="container-fluid fondoblu respuesta">
 
 <div class="container-fluid col-10 col-md-8 col-sm-10 col-lg-6">
-	 <p class="titolinoalto text-left " style="color: white;" > Message received </p>
+	 <p class="titolinoalto text-left "> Message received </p>
 	 <h1 class="titolonero" style="color: white;"> Thank you for your message </h1>
     <p class="testobase" style="color: white;"> An answer will appear soon in your mail box</p>
 
